# git-repo-manager

./: .SRCINFO  404.html  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  Justfile  PKGBUILD  README.md  build.rs  contributing.html  dependency_updates.html  developing.html  dist-workspace.toml  documentation.html  example.config.toml  example.config.yaml  faq.html  flake.nix  forge_integration.html  formatting_and_style.html  getting_started.html  index.html  installation.html  local_configuration.html  overview.html  print.html  release.sh  releases.html  repos.html  rust-toolchain.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-4fb9877e.js  searchindex.js  searchindex.json  testing.html  toc-47196751.js  toc-c36df20a.js  toc.html  toc.js  (+8 more)
.github/: FUNDING.yml
.github/workflows/: gh-pages.yml  nix.yml
depcheck/: .gitignore  requirements.txt  update-cargo-dependencies.py
docs/: book.toml
docs/src/: SUMMARY.md  dependency_updates.md  developing.md  documentation.md  faq.md  forge_integration.md  formatting_and_style.md  getting_started.md  installation.md  local_configuration.md  overview.md  releases.md  repos.md  testing.md  tutorial.md  worktree_behaviour.md  worktree_remotes.md  worktree_working.md  worktrees.md
e2e_tests/: compose.yml  conftest.py  docker-compose.yml  helpers.py  requirements.txt  test_basic.py  test_repos_find.py  test_repos_find_remote.py  test_repos_status.py  test_repos_sync.py  test_worktree_clean.py  test_worktree_config_presistent_branch.py  test_worktree_conversion.py  test_worktree_fetch.py  test_worktree_rebase.py  test_worktree_status.py  test_worktrees.py  update_requirementstxt.sh
e2e_tests/docker/: Dockerfile
e2e_tests/docker-rest/: Dockerfile
e2e_tests/docker-rest/flask/: app.py  github.py  github_api_page_1.json.j2  github_api_page_4.json.j2  github_api_user.json  gitlab.py  gitlab_api_page_1.json  gitlab_api_page_2.json  gitlab_api_page_3.json  gitlab_api_page_4.json
e2e_tests/rest/: Containerfile
e2e_tests/rest/flask/: app.py  github_api_page_2.json.j2  github_api_page_3.json.j2  gitlab.py  gitlab_api_user.json
pkg/arch/: .SRCINFO  PKGBUILD
src/: auth.rs  cmd.rs  config.rs  lib.rs  main.rs  output.rs  path.rs  repo.rs  table.rs  tree.rs  worktree.rs
src/grm/: cmd.rs  main.rs  output.rs
src/provider/: gitea.rs  github.rs  gitlab.rs  mod.rs
src/repo/: mod.rs  remote.rs  worktree.rs
src/repo/worktree/: error.rs  mod.rs
tests/: helpers.rs  repo.rs
