[package]
name = "git-repo-manager"
version = "0.7.22"
edition = "2021"

authors = [
  "Hannes Körber <hannes@hkoerber.de>",
]
description = """
Manage multiple git repositories.
You configure the git repositories in a file, the program does the rest!
"""

keywords = ["git"]
categories = [
  "command-line-utilities",
  "development-tools",
]

homepage = "https://github.com/hakoerber/git-repo-manager"
repository = "https://github.com/hakoerber/git-repo-manager"

readme = "README.md"

rust-version = "1.74"

license = "GPL-3.0-only"

[profile.e2e-tests]
inherits = "dev"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lib]
name = "grm"
path = "src/lib.rs"

[[bin]]
name = "grm"
path = "src/grm/main.rs"

[dependencies.toml]
version = "=0.8.19"

[dependencies.serde]
version = "=1.0.215"
features = ["derive"]

[dependencies.git2]
version = "=0.19.0"

[dependencies.shellexpand]
version = "=3.1.0"

[dependencies.clap]
version = "=4.5.21"
features = ["derive", "cargo"]

[dependencies.console]
version = "=0.15.8"

[dependencies.regex]
version = "=1.11.1"

[dependencies.comfy-table]
version = "=7.1.3"

[dependencies.serde_yaml]
version = "=0.9.34"

[dependencies.serde_json]
version = "=1.0.133"

[dependencies.ureq]
version = "=2.11.0"
features = ["json"]

[dependencies.parse_link_header]
version = "=0.4.0"

[dependencies.url-escape]
version = "=0.1.1"

[dev-dependencies.outdir-tempdir]
version = "=0.2.0"

[features]
static-build = [
  "git2/vendored-openssl",
  "git2/vendored-libgit2",
]
